# HR_Automation_SHAI

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  plan.md
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_m1_identity.py  0002_m2_requisitions.py  0003_m3_candidates.py  0004_m4_assessments.py  0005_m5_interviews.py  0006_m6_offers.py  0007_m7_documents.py  0008_m8_onboarding.py  0009_m9_notifications.py  0010_m11_consent_retention.py  0011_audit_log.py
apps/api/app/: config.py  db.py  deps.py  main.py  seed.py
apps/api/app/auth/: jwt.py  msal_client.py  service.py
apps/api/app/core/: pii.py
apps/api/app/integrations/: email.py  graph.py  greythr.py  storage.py  whatsapp.py
apps/api/app/jobs/: celery_app.py  tasks.py
apps/api/app/models/: __init__.py  assessment.py  audit.py  candidate.py  consent.py  department.py  document.py  enums.py  interview.py  mixins.py  notification.py  offer.py  onboarding.py  requisition.py  user.py
apps/api/app/routers/: applications.py  assessments.py  audit.py  auth.py  candidate_portal.py  candidates.py  checklists.py  dashboard.py  departments.py  documents.py  health.py  interviews.py  lookups.py  notifications.py  offer_templates.py  offers.py  onboarding.py  reports.py  requisitions.py  rubrics.py  users.py
apps/api/app/schemas/: assessment.py  audit.py  auth.py  candidate.py  consent.py  department.py  document.py  interview.py  notification.py  offer.py  onboarding.py  report.py  requisition.py  (+1 more)
apps/api/tests/: conftest.py  test_assessments.py  test_audit.py  test_auth.py  test_candidates.py  test_departments.py  test_documents.py  test_health.py  test_interviews.py  test_notifications.py  test_offers.py  test_onboarding.py  test_rbac.py  test_reports.py  test_requisitions.py  test_retention.py
(+88 files in other folders)
