[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hr-automation-api"
version = "0.1.0"
description = "HR_Automation_SHAI backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "email-validator>=2.2,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "celery>=5.4,<6.0",
  "redis>=5.2,<6.0",
  "httpx>=0.27,<1.0",
  "python-multipart>=0.0.12",
  "python-jose[cryptography]>=3.3,<4.0",
  "msal>=1.31,<2.0",
  "cryptography>=43,<46",
  "boto3>=1.35,<2.0",
  "jinja2>=3.1,<4.0",
  "structlog>=24.4,<25.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "pytest-cov>=5.0,<7.0",
  "respx>=0.21,<1.0",
  "ruff>=0.8,<1.0",
  "mypy>=1.13,<2.0",
  "types-python-jose",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "alembic*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle + pyflakes
  "I",             # isort
  "B",             # bugbear
  "UP",            # pyupgrade
  "SIM",           # simplify
  "RUF",           # ruff-native
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = [
  "celery.*",
  "msal.*",
  "boto3.*",
  "botocore.*",
  "weasyprint.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
